examples/compiler_errors/header_counts/ErrorNoteBroken.flx
module ErrorNoteBroken {
    public fn one() -> Int {
        1
    }
}
